More overflow prevention

--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,7 @@
 @import "filter.css";
 @import "progress.css";
 @import "map.css";
+
+main {
+  overflow: hidden;
+}
